--- a/tmec_analysis.ipynb
+++ b/tmec_analysis.ipynb
@@ -678,9 +678,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-20-86a4b500317d>:11: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "<ipython-input-20-10462b64bd70>:11: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels(['{:,}'.format(int(x/1000000)) for x in ax.get_yticks().tolist()])\n",
-      "<ipython-input-20-86a4b500317d>:12: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "<ipython-input-20-10462b64bd70>:12: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax2.set_yticklabels(['{:,}'.format(int(x/1000000)) for x in ax2.get_yticks().tolist()])\n"
      ]
     },
@@ -713,6 +713,7 @@
     "ax.set_ylabel('Value US$ (millions)')\n",
     "ax2.set_ylabel('Count (millions)')\n",
     "fig.set_size_inches(20,11)\n",
+    "plt.savefig('exp_vs_covid.png', dpi=100)\n",
     "plt.show()"
    ]
   }
