--- a/tmec_analysis.ipynb
+++ b/tmec_analysis.ipynb
@@ -48,6 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#create variables to create the data frames for ploting\n",
     "exports={'Mexico':['Canada', 'USA'], \n",
     "         'Canada':['Mexico', 'USA'], \n",
     "         'USA':['Mexico', 'Canada']}\n",
@@ -58,6 +59,7 @@
     "            'Canada_USA' : ['x'],\n",
     "            'USA_Mexico' : ['x'],\n",
     "            'USA_Canada' : ['x']}\n",
+    "\n",
     "e_list=['Mexico_Canada','Mexico_USA', 'Canada_Mexico', 'Canada_USA',\n",
     "       'USA_Mexico', 'USA_Canada']\n",
     "# for export in exports:\n",
@@ -86,26 +88,32 @@
     }
    ],
    "source": [
+    "#usin loops in order to create the dataframes for each of the countrys and their partners\n",
     "idx= (-1)\n",
     "for export in exports:\n",
     "    for  x in range(2):\n",
     "        idx += 1\n",
     "        export_df[e_list[idx]][0]=exp_df.loc[(exp_df['Reporter']== export) & (exp_df['Partner']== exports[export][x]),:].transpose(copy=True)\n",
-    "\n",
+    "        \n",
+    "        #convrting the values in row 2 into column names\n",
     "        (n1,n2,n3,n4,n5) =export_df[e_list[idx]][0].iloc[2,:]\n",
     "        col_names=[n1,n2,n3,n4,n5]\n",
+    "        \n",
+    "        #removing unnecesary rows\n",
     "        export_df[e_list[idx]][0]=export_df[e_list[idx]][0][5:]\n",
     "\n",
     "        #remove commas \",\" from string values in order tho convert string values into numeric values\n",
     "        export_df[e_list[idx]][0].replace(',','', regex=True, inplace=True)\n",
-    "\n",
-    "#       export_df[e_list[idx]][0]=export_df[e_list[idx]][0].fillna(0)\n",
+    "        \n",
+    "        #changing values to float in order to be able to plot\n",
     "        export_df[e_list[idx]][0]=export_df[e_list[idx]][0].astype(float)\n",
     "        export_df[e_list[idx]][0].columns = col_names\n",
     "        export_df[e_list[idx]][0].reset_index(inplace=True)\n",
+    "        \n",
+    "        #removing Total column wich will be ploted separately\n",
     "        export_df[e_list[idx]][0]=export_df[e_list[idx]][0].drop(['TOTAL Total of all HS commodities'],axis=1)\n",
     "        export_df[e_list[idx]][0].drop(export_df[e_list[idx]][0].tail(2).index, inplace = True) \n",
-    "        print(f'{idx} report: {export}  Partner: {exports[export][x]} -- ok')"
+    "        print(f'{idx} report: {export}  Partner: {exports[export][x]} -- ok') #confirming dataframe generation process"
    ]
   },
   {
@@ -114,9 +122,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# filling missing values. We chose interpolate because most missing values are used only to see teandency of previous years\n",
     "export_df['Mexico_Canada'][0]=export_df['Mexico_Canada'][0].interpolate()\n",
     "export_df['Mexico_USA'][0]=export_df['Mexico_USA'][0].interpolate()\n",
-    "export_df['Canada_Mexico'][0]=export_df['Canada_Mexico'][0].fillna(0)\n",
+    "# In this case we dont use interpolate becaus based on the data we are asuming that missing values are actualy 0.\n",
+    "# We are basin our asumption based on the fact that the missing values are ciclical and the data analysed is based on products that could be seasonal\n",
+    "export_df['Canada_Mexico'][0]=export_df['Canada_Mexico'][0].fillna(0)  \n",
     "export_df['Canada_USA'][0]=export_df['Canada_USA'][0].interpolate()\n",
     "export_df['USA_Mexico'][0]=export_df['USA_Mexico'][0].interpolate()\n",
     "export_df['USA_Canada'][0]=export_df['USA_Canada'][0].interpolate()"
@@ -128,6 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Generating Total exports Data Frame \n",
     "total_exp_df=exp_df.loc[(exp_df['Commodity']=='TOTAL Total of all HS commodities')&(exp_df['Partner']=='World')]\n",
     "total_exp_df=total_exp_df.drop(['Indicator', 'Trade flow','Commodity', 'Partner'],axis=1)\n",
     "total_exp_df=total_exp_df.transpose()\n",
@@ -137,6 +149,7 @@
     "total_exp_df=total_exp_df.astype(float)\n",
     "total_exp_df.reset_index(inplace=True)\n",
     "\n",
+    "# filling missing values. We chose interpolate because most missing values are used only to see teandency of previous years\n",
     "total_exp_df=total_exp_df.interpolate()"
    ]
   },
@@ -146,6 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#generating data frames of exports by product group for each country\n",
     "meat_exp_df=pd.DataFrame()\n",
     "meat_exp_df['index']=export_df['Mexico_Canada'][0]['index']\n",
     "meat_exp_df['Mexico']=export_df['Mexico_Canada'][0]['02 Meat and edible meat offal']+export_df['Mexico_USA'][0]['02 Meat and edible meat offal']\n",
@@ -228,25 +242,22 @@
     }
    ],
    "source": [
-    "\n",
     "plot_can_mex_df =export_df['Mexico_Canada'][0].melt('index', var_name='cols',  value_name='vals')\n",
     "plot_covid =na_cov_df2.melt('index', var_name='cols',  value_name='vals')\n",
     "plt.figure(figsize=(20, 8))\n",
     "sns.set_style(\"darkgrid\")\n",
-    "\n",
     "can_mex = sns.lineplot(x=\"index\", y=\"vals\", hue='cols', data=plot_can_mex_df)\n",
     "cov_mex = sns.lineplot(x=\"index\", y=\"vals\", color='magenta', data=plot_covid, label='Covid confirmed cases')\n",
-    "\n",
     "plt.legend(loc='upper left')\n",
     "plt.xticks(rotation='vertical')\n",
     "plt.ylabel('Value in  (10 M USD)')\n",
     "plt.xlabel('Period (YYYY-MM)')\n",
     "plt.title(f\"Mexico Exports to Canada 2016 - Oct_2020\")\n",
-    "\n",
     "plt.plot(label=\"test2\")\n",
-    "\n",
     "plt.ylim(bottom = -0.2e7, top=5e7)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# An increase in the meat group is perceived on may 2020"
    ]
   },
   {
@@ -277,7 +288,9 @@
     "plt.ylabel('Value in  (1000 M USD)')\n",
     "plt.xlabel('Period (YYYY-MM)')\n",
     "plt.title(f\"Mexico Exports to USA 2016 - Oct_2020\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# A suden decrease on the beverages group is perceived on may 2020 which compared to previous years seems abnormal"
    ]
   },
   {
@@ -309,7 +322,9 @@
     "plt.xlabel('Period (YYYY-MM)')\n",
     "plt.title(f\"Canada Exports to Mexico 2016 - Oct_2020\")\n",
     "plt.ylim(bottom=-0.2e7, top=3.5e7)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# A decrease in the meat group is perceived on april 2020 becoming the lowest on the last 5 years"
    ]
   },
   {
@@ -341,9 +356,9 @@
     "plt.title(f\"Canada Exports to USA 2016 - Oct_2020\")\n",
     "plt.ylabel('Value in  (100 M USD)')\n",
     "plt.xlabel('Period (YYYY-MM)')\n",
+    "plt.show()\n",
     "\n",
-    "\n",
-    "plt.show()"
+    "# A decrease in the meat group is perceived on april 2020 becoming the lowest on the last 5 years"
    ]
   },
   {
@@ -381,7 +396,9 @@
     "plt.ylabel('Value in  (100 M USD)')\n",
     "plt.xlabel('Period (YYYY-MM)')\n",
     "plt.title(f\"USA Exports to Mexico 2016 - Oct_2020\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# A decrease in the meat group is perceived on may 2020 becoming the lowest on the last 5 years"
    ]
   },
   {
@@ -452,7 +469,9 @@
     "plt.ylabel('Value in  (100 M USD)')\n",
     "plt.xlabel('Period (YYYY-MM)')\n",
     "plt.title(f\"02 Meat and edible meat offal 2016 - Oct_2020\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# on may 2020 as US Exports drop Mexico and Canada have an increase which compensate US deficit, but as US normalises so does Mexico and Canada"
    ]
   },
   {
@@ -552,7 +571,10 @@
     "plt.ylabel('Value in  (100 M USD)')\n",
     "plt.xlabel('Period (YYYY-MM)')\n",
     "plt.title(f\"22 Beverages, spirits and vinegar 2016 - Oct_2020\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# There is an importatn drop on Mexico's exports on june 2020, wher brewing plants were closed in mexico as they where considered non esential.\n",
+    "# but in return, sept and october 2020 are higher than any point on the las 5 years being almost 100 M usd higher than before covid"
    ]
   },
   {
@@ -600,7 +622,10 @@
     "ax2.set_ylabel('Count (millions)')\n",
     "fig.set_size_inches(20,11)\n",
     "plt.savefig('exp_vs_covid.png', dpi=100)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# At the begining of the pandemic we could see a signigicant drop for the three countrys but it seems that as time goes by \n",
+    "# they are returning back to normal, which could mean an adaptation to working conditions under covid restrictions."
    ]
   },
   {
